<resources>
    <string name="app_name">Pakanku</string>
    <string name="Logo">Logo Pakanku</string>

    <string name="title_activity_information">Informasi</string>
    <string name="title_activity_resepransum">Resep Ransum</string>
    <string name="title_activity_buatpakan">Buat Pakan</string>
    <string name="title_activity_ransumrecord">Record Resep</string>
    <string name="title_activity_inputharga">Edit Harga</string>
    <string name="title_activity_cekuntung">Cek Untung</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="button_yes">Iya</string>
    <string name="button_no">Tidak</string>
    <string name="oke">OKE</string>
    <string name="next"> next </string>

    <string name="tips">TIPS</string>
    <string name="history">HISTORY</string>

    <string name="action_add">Add</string>
    <string name="action_close">Close</string>
    <string name="action_reload">Reload</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>
    <string name="action_help">Help</string>

    <string name="BuatButton">Buat Pakan</string>
    <string name="InfoButton">Informasi</string>
    <string name="CekUntung">Cek Untung</string>

    <string name="byk_ternak">banyak</string>
    <string name="banyak">ekor</string>
    <string name="brt_ternak">bobot</string>
    <string name="kilogram">kg</string>
    <string name="lama_ternak">lama pemeliharaan</string>
    <string name="lama">hari</string>
    <string name="byk_produk">Hasil Produk /hari</string>

    <string name="plus_button">+</string>
    <string name="min_button">-</string>

    <string name="potong">potong</string>
    <string name="perah">perah</string>
    <string name="petelur">petelur</string>
    <string name="hobi">hobi</string>
    <string name="kerja">kerja</string>

    <string name="Button">button</string>
    <string name="Close">close</string>
    <string name="indicator">Indicator</string>
    <string name="harga">harga/kg</string>
    <string name="porsi">porsi(gr)</string>
    <string name="biaya">biaya(Rp)</string>
    <string name="record">Record Ternak</string>
    <string name="nomor">No</string>
    <string name="tanggal">dd-mm-yyyy</string>
    <string name="hewan">Hewan</string>
    <string name="nama">Nama Bahan</string>
    <string name="hijauan">Hijauan</string>
    <string name="energi">Sumber Energi</string>
    <string name="protein">Sumber Protein</string>
    <string name="uang">Rp.</string>
    <string name="sumber">Sumber : </string>

    <string name="pengeluaran">Pengeluaran per hari</string>
    <string name="masukTot">total pemasukan</string>
    <string name="untungTot">total keuntungan</string>
    <string name="tagpengeluaran">pengeluaran / hari x jum. ternak x lama</string>
    <string name="tagmasuk">(harga*jum. ternak*lama * produksi/hari)</string>
    <string name="taguntung">Total pemasukan - Total pengeluaran</string>
    <string name="datamasuk1">Harga Produk (per kg)</string>
    <string name="datamasuk2">Jumlah Ternak (ekor)</string>
    <string name="datamasuk3">Lama Pemeliharaan (hari)</string>
    <string name="datamasuk4">Produksi Ternak per hari</string>

    <string name="copyright">copyright 2016 Pakanku Apps by Patpat Corp.</string>

    <string-array name="spinneritem">
        <item>kg</item>
        <item>ltr</item>
    </string-array>

    <string-array name="hewan">
        <item>Semua</item>
        <item>Sapi</item>
        <item>Ayam</item>
        <item>Kambing</item>
        <item>Domba</item>
    </string-array>
</resources>
