<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/Base"
    tools:context="com.android.mirzaadr.pakanku.ternak2">

    <!--LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"-->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:background="@color/Accent"
                android:padding="5dp">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox"
                    android:layout_weight="0.4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/table"
                    android:text="@string/nama"
                    android:textColor="@color/Shade"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/table2"
                    android:textColor="@color/Shade"
                    android:layout_weight="1"
                    android:text="@string/harga" />
            </TableRow>
        </TableLayout>

        <ListView
            android:id="@+id/listBahan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>

        <!-- oke button -->
        <Button
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/oke"
            android:id="@+id/buttonk"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_custom" />

</LinearLayout>
