<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    android:background="@color/Base"
    tools:context=".MainActivity"
    >

    <!--<android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:layout_marginTop="40sp"
            android:contentDescription="@string/Logo"
            android:src="@drawable/logo"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="31dp"
            android:layout_marginBottom="41dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp">
            <ImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_gravity="center"
                android:id="@+id/BuatPakan"
                android:src="@drawable/pakan_button"
                android:contentDescription="@string/BuatButton"
                android:clickable="true"
                android:onClick="BuatClick"/>
                <!--TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BuatButton"
                    android:layout_gravity="center_horizontal"/-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp">
            <ImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_gravity="center"
                android:id="@+id/Informasi"
                android:src="@drawable/info_button"
                android:clickable="true"
                android:contentDescription="@string/InfoButton"
                android:onClick="InfoClick" />
                <!--TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/InfoButton"
                    android:layout_gravity="center_horizontal"/-->

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/copyright"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:layout_marginTop="7dp"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
