<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Base"
    android:orientation="vertical"
    android:scrollbars="none"
    android:padding="10dp"
    tools:context="com.android.mirzaadr.pakanku.BuatPakan">

    <!--Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:background="@color/Shade"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:background="@color/Shade"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/spinner"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"-->

    <!-- indicator -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/indicator"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal">
        <ImageView android:layout_height="10dp" android:layout_width="10dp"
            android:id="@+id/btn1"
            android:src="@drawable/holo_circle"
            android:layout_gravity="center_vertical"
            />
        <ImageView android:layout_height="10dp" android:layout_width="10dp"
            android:id="@+id/btn2"
            android:layout_toRightOf="@id/btn1"
            android:src="@drawable/holo_circle"
            android:layout_margin="10dp"
            />
        <ImageView android:layout_height="10dp" android:layout_width="10dp"
            android:id="@+id/btn3"
            android:layout_toRightOf="@id/btn2"
            android:src="@drawable/holo_circle"
            android:layout_gravity="center_vertical"
            />
        <ImageView android:layout_height="10dp" android:layout_width="10dp"
            android:id="@+id/btn4"
            android:layout_toRightOf="@id/btn3"
            android:src="@drawable/holo_circle"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <!-- Imageswitch Layout -->
    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:paddingTop="20dp"
        android:layout_below="@+id/indicator"
        android:layout_above="@+id/layout2"
        android:orientation="horizontal">

        <Button
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:onClick="prevImageButton"
            android:gravity="start"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:id="@+id/button2"
            android:background="@drawable/pre_button" />

        <ImageSwitcher
            android:id="@+id/imageSwitcher"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="30dp"
            android:gravity="end"
            android:id="@+id/buttonNext"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:onClick="nextImageButton"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/nex_button" />

    </RelativeLayout>

    <!-- insert bobot ternak layout -->
    <RelativeLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout3"
        android:layout_centerInParent="true"
        android:orientation="horizontal">
        <EditText
            android:layout_width="270dp"
            android:layout_height="32dp"
            android:inputType="number"
            android:hint="@string/brt_ternak"
            android:ems="10"
            android:textSize="15sp"
            android:id="@+id/editText"
            android:background="@drawable/round_object"
            android:paddingLeft="15dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/kilogram"
            android:layout_toStartOf="@+id/kilogram"/>
        <TextView
            android:id="@+id/kilogram"
            android:layout_width="35dp"
            android:layout_height="32dp"
            android:text="kg"
            android:gravity="center"
            android:background="@drawable/round_object"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <!-- insert jumlah ternak layout -->
    <RelativeLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/layout4"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp">
        <EditText
            android:layout_width="270dp"
            android:layout_height="32dp"
            android:inputType="number"
            android:hint="@string/byk_ternak"
            android:ems="10"
            android:textSize="15sp"
            android:id="@+id/editText2"
            android:paddingLeft="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@drawable/round_object"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/ekor"
            android:layout_toStartOf="@+id/ekor"/>
        <TextView
            android:id="@+id/ekor"
            android:layout_width="35dp"
            android:layout_height="32dp"
            android:text="ekor"
            android:gravity="center"
            android:background="@drawable/round_object"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <!-- checkbox series -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout4"
        android:layout_above="@+id/button"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">
    <LinearLayout
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/checkPotong"
            android:checked="false" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/potong"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:gravity="center">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/checkPerah"
            android:checked="false" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/perah"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:gravity="center">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/checkPetelur"
            android:checked="false" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/petelur"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:gravity="center">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/checkHobi"
            android:checked="false" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/hobi"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:gravity="center">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/checkKerja"
            android:checked="false" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/kerja"/>
    </LinearLayout>

    </LinearLayout>

    <!-- oke button -->
    <Button
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/oke"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="5dp"
        android:id="@+id/button"
        android:onClick="nextClick"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_custom" />

    <!--<it.moondroid.coverflow.components.ui.containers.FeatureCoverFlow
        android:id="@+id/coverflow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        coverHeight="@dimen/activity_horizontal_margin"
        coverWidth="@dimen/activity_horizontal_margin"
        maxScaleFactor="1.5"
        reflectionGap="0px"
        rotationThreshold="0.5"
        scalingThreshold="0.5"
        spacing="0.6" />
    </RelativeLayout-->

</RelativeLayout>
