<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/ButtonPressed"
    android:padding="8dp" >

    <!-- Thumbnail Image -->
    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:padding="8dp"
        android:background="@drawable/button_custom"
        android:contentDescription="@string/hewan"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"/>

    <!-- Tanggal Input -->
    <TextView
        android:id="@+id/tanggal_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/thumbnail"
        android:layout_toRightOf="@+id/thumbnail"
        android:layout_toEndOf="@+id/thumbnail"
        android:textColor="@color/Accent"
        android:text="@string/tanggal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- Nama hewan -->
    <TextView
        android:id="@+id/nama_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/thumbnail"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Accent"
        android:text="@string/hewan"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_alignBottom="@+id/thumbnail"
        android:layout_below="@id/tanggal_record"
        android:layout_toRightOf="@+id/thumbnail"
        android:layout_toEndOf="@id/thumbnail">

        <RelativeLayout
            android:id="@+id/judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">
            <TextView
                android:id="@+id/bobot"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="bobot"
                android:textColor="@color/Accent"/>

            <TextView
                android:id="@+id/tujuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="tujuan"
                android:gravity="center"
                android:textColor="@color/Accent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/bobot"
                android:layout_toEndOf="@+id/bobot"
                android:layout_toLeftOf="@+id/jumlah"
                android:layout_toStartOf="@+id/jumlah" />

            <TextView
                android:id="@+id/jumlah"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="jumlah"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/Accent"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/judul"
            android:layout_alignParentBottom="true"
            android:background="@drawable/custom_yellow">

            <RelativeLayout
                android:id="@+id/view3"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_centerVertical="true"
                android:background="@drawable/button_custom">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/Accent"
                    android:layout_margin="3dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="0.0"
                    android:id="@+id/bobot_record" />
            </RelativeLayout>

            <ImageView
                android:contentDescription="@string/indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/ic_logo_potong"
                android:layout_centerVertical="true"
                android:layout_alignTop="@+id/view4"
                android:layout_alignBottom="@+id/view4"
                android:layout_toLeftOf="@+id/view4"
                android:layout_toStartOf="@id/view4"
                android:layout_toRightOf="@+id/view3"
                android:layout_toEndOf="@+id/view3"
                android:id="@+id/thumbnailTujuan" />

            <RelativeLayout
                android:id="@+id/view4"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="3dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/button_custom">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/Accent"
                    android:layout_margin="3dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="0.0"
                    android:id="@+id/jumlah_record" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>